objects/UNITY_MuleSiteSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Mule site settings for subdmains properties.</description>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content-Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <description>mule domain endpoing</description>
        <label>Domain</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host__c</fullName>
        <label>Host</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Protocol__c</fullName>
        <defaultValue>&apos;http&apos;</defaultValue>
        <label>Protocol</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>UNITY Mule Site Setting</label>
    <listViews>
        <fullName>all_fields</fullName>
        <columns>NAME</columns>
        <columns>Domain__c</columns>
        <columns>Host__c</columns>
        <columns>IsActive__c</columns>
        <columns>Protocol__c</columns>
        <columns>Content_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>all fields</label>
        <language>en_US</language>
    </listViews>
</CustomObject>